# aigos

./: Cargo.toml  README.md
config/: sample.yaml
schemas/: config.schema.json
src/: lib.rs
