[package]
name = "aigos"
version = "1.0.0"
edition = "2021"
description = "AIGOS configuration schemas and manifest definitions"
license = "MIT"
repository = "https://github.com/pngen/aigos"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"